<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sfondo">

    <android.widget.Button
        android:id="@+id/buttonDispensa"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:background="@drawable/two_state_button"
        android:text="@string/buttonDispensa"
        android:textColor="@color/primaryText"
        app:layout_constraintBottom_toTopOf="@+id/buttonMappa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/buttonMappa"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:background="@drawable/two_state_button"
        android:onClick="callmap"
        android:text="@string/buttonMappa"
        android:textColor="@color/primaryText"
        app:layout_constraintBottom_toTopOf="@+id/buttonDatiPersonali"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDispensa" />

    <android.widget.Button
        android:id="@+id/buttonDatiPersonali"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:background="@drawable/two_state_button"
        android:text="@string/buttonDatiPersonali"
        android:textColor="@color/primaryText"
        app:layout_constraintBottom_toTopOf="@+id/buttonValoriNutrizionali"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMappa" />

    <android.widget.Button
        android:id="@+id/buttonValoriNutrizionali"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:background="@drawable/two_state_button"
        android:text="@string/buttonValoriNutrizionali"
        android:textColor="@color/primaryText"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDatiPersonali" />

    <android.widget.Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/two_state_button"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonValoriNutrizionali"
        app:layout_constraintTop_toBottomOf="@+id/buttonValoriNutrizionali" />


</androidx.constraintlayout.widget.ConstraintLayout>