<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/sfondo">


    <TextView
        android:id="@+id/tv_modifica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/infoModifica"
        android:paddingTop="30dp"
        android:layout_gravity="center"
        android:paddingBottom="30dp"
        android:textColorHint="@color/primaryText"
        android:textSize="26sp"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/modificaNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_account"
        android:drawablePadding="10dp"
        android:drawableTint="@color/primaryText"
        android:ems="10"
        android:hint="@string/inputName"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/primaryText"
        android:textColorHint="@color/primaryText" />

    <EditText
        android:id="@+id/modificaEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="10dp"
        android:drawableTint="@color/primaryText"
        android:ems="10"
        android:hint="@string/inputEmail"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/primaryText"
        android:textColorHint="@color/primaryText"
        tools:ignore="TextFields" />


    <EditText
        android:id="@+id/modificaPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_security"
        android:drawablePadding="10dp"
        android:drawableTint="@color/primaryText"
        android:ems="10"
        android:hint="@string/InputPassword"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/primaryText"
        android:textColorHint="@color/primaryText" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="36dp">

        <TextView
            android:id="@+id/viewPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/textPeso"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/primaryText"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/viewAltezza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/textAltezza"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/primaryText"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="36dp">

        <NumberPicker
            android:id="@+id/modificaPickerPeso"
            android:layout_width="wrap_content"
            android:layout_height="106dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_weight="1"
            android:clickable="false"
            android:foregroundTint="@color/primaryText"
            android:gravity="center"
            android:theme="@style/AppTheme.Picker" />



        <NumberPicker
            android:id="@+id/modificaPickerAltezza"
            android:layout_width="wrap_content"
            android:layout_height="106dp"
            android:layout_weight="1"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:gravity="center"
            android:theme="@style/AppTheme.Picker" />

    </LinearLayout>


    <android.widget.Button
        android:id="@+id/buttonConferma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/two_state_button"
        android:text="@string/buttonConferma"
        android:textColor="@color/primaryText"
        android:textColorHint="@color/primaryText" />




</LinearLayout>
