<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sfondo">

    <TextView
        android:id="@+id/title"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/datiPersonali"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nickname"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_account"
        android:drawablePadding="10dp"
        android:drawableTint="@color/primaryText"
        android:hint="@string/inputName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/primaryText"
        android:textColorHint="@color/primaryText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/emailPersonalData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/emailPersonalData"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="10dp"
        android:drawableTint="@color/primaryText"
        android:hint="@string/inputEmail"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/primaryText"
        android:textColorHint="@color/primaryText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="peso"
        android:textColor="@color/primaryText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/height"
        app:layout_constraintEnd_toStartOf="@+id/height"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="altezza"
        android:textColor="@color/primaryText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonModifica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/weight"
        app:layout_constraintTop_toBottomOf="@+id/emailPersonalData" />

    <android.widget.Button
        android:id="@+id/buttonModifica"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:background="@drawable/two_state_button"
        android:text="@string/buttonModifica"
        android:textColor="@color/primaryText"

        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <android.widget.Button
        android:id="@+id/btnLogout"
        android:layout_height="wrap_content"
        android:background="@drawable/two_state_button"
        android:textColor="@color/primaryText"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonModifica"

        app:layout_constraintTop_toBottomOf="@+id/buttonModifica"
        android:layout_width="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>