<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.widget.Button
        android:id="@+id/buttonNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/two_state_button"
        android:text="@string/buttonNo"
        android:textColor="@color/primaryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonYes"
        app:layout_constraintTop_toBottomOf="@+id/quantitAliment" />

    <android.widget.Button
        android:id="@+id/buttonYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/two_state_button"
        android:text="@string/buttonRimuovi"
        android:textColor="@color/primaryText"
        app:layout_constraintBottom_toBottomOf="@+id/buttonNo"
        app:layout_constraintEnd_toStartOf="@+id/buttonNo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/quantitAliment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/quantitAlimentiPresi"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/buttonNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCarb" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/primaryText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewCal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewQuant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCal"
        app:layout_constraintEnd_toStartOf="@+id/textViewCal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/primaryText"/>

    <TextView
        android:id="@+id/textViewCal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/primaryText"
        app:layout_constraintBottom_toTopOf="@+id/textViewCarb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewQuant"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textViewPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/primaryText"
        app:layout_constraintBottom_toBottomOf="@+id/textViewGras"
        app:layout_constraintEnd_toStartOf="@+id/textViewGras"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewGras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/primaryText"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCarb"
        app:layout_constraintEnd_toStartOf="@+id/textViewCarb"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewPro" />

    <TextView
        android:id="@+id/textViewCarb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/primaryText"
        app:layout_constraintBottom_toTopOf="@+id/quantitAliment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewGras"
        app:layout_constraintTop_toBottomOf="@+id/textViewCal" />

</androidx.constraintlayout.widget.ConstraintLayout>